Fixing color bug on smaller devices for juz button on Tafseer Guide page

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -39,6 +39,7 @@
   background-color: grey;
   opacity: 0.6;
   /* cursor: not-allowed; */
+  color: black;
 }
 
 .grey:hover {
